wp-content/themes/apacheblack/style.css
/*
	Theme Name: Apache Black
	Theme URI: http://kayra.co.uk
	Description: Theme for the Apache Black blog
	Version: 1.0.0
	Author: Kayra Alat (@kayraalat)
	Author URI: http://kayra.co.uk	
	Tags: HTML5, CSS3

	License: MIT
	License URI: http://opensource.org/licenses/mit-license.php

*/


/* Structure
–––––––––––––––––––––––––––––––––––––––––––––––––– */

body {
	background-color: #2B303B;
}

.index-header {
	background: url(/wp-content/themes/apacheblack/images/header.jpg) no-repeat center center; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	height: 945px;
}

.archive-header h1 {
	margin-top: 30px;
}

.feature {
	padding: 0;
}

.footer {
	clear: both;
	text-align: center;
	padding: 30px 0;
}

.content-text {
	margin-bottom: 50px;
}

.latest-post-image {
	display: block;
	position: relative;
}

.latest-post-text {
	text-align: center;
	width: 100%;
	position: absolute;
	top: 70%;
}

.feature > a {
	display: block;
	width: 100%;
	height: 100%;
	position: relative;
}

.featured-post-text {
	text-align: center;
	width: 100%;
	position: absolute;
	top: 70%
}

/* Images
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.latest-post-image img {
	width: 100%;
}

.featured img {
    width: 100%;
    height: auto;
}


/* Typography
–––––––––––––––––––––––––––––––––––––––––––––––––– */

@font-face {
    font-family: 'Montserrat';
    src: url('fonts/montserrat-light-webfont.eot');
    src: url('fonts/montserrat-light-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/montserrat-light-webfont.woff2') format('woff2'),
         url('fonts/montserrat-light-webfont.woff') format('woff'),
         url('fonts/montserrat-light-webfont.ttf') format('truetype'),
         url('fonts/montserrat-light-webfont.svg#montserratlight') format('svg');
    font-weight: normal;
    font-style: normal;
}

h1, h2, h3, h4, h5, h6, p {
	color: #FFFFFF;
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Montserrat', sans-serif;
	font-weight: 300;
}

h1 {
	letter-spacing: 7px;
	font-size: 5em;
	text-align: center;
	margin-top: 200px;
	text-transform: uppercase;
	margin-bottom: 10px;
}

.post .title h1 {
	font-size: 5.1em;
	margin-bottom: 0.5em;
}

h2 {
	letter-spacing: 1px;
	font-size: 1.6em;
	text-align: center;
	text-transform: uppercase;
	margin: 0;
}

h3 {
	font-size: 4em;
	text-align: center;
	display: inline-block;
	text-shadow: 0px 2px 4px #000000;
	margin: 0;
	padding: 0;
	text-decoration: none;
}

h4 {
	font-size: 2em;
	text-align: center;
	text-shadow: 0px 2px 4px #000000;
	margin-top: 650px;
}

h4 a {
	text-decoration: none;
	color: #FFFFFF;
	font-size: 2em;
}

h4 a:hover {
	text-decoration: none;
	color: #FFFFFF;
}


h3:visited, h4 a:visited {
	color: #FFFFFF;
	text-decoration: none;
}

.archive-list h4 {
	margin-top: 0;
	padding: 10px 0;
	font-size: 1em;
}

h5 {
	font-size: 2em;
	text-align: center;
	text-shadow: 2px 2px 4px #000000;
}

.feature h5 {
	display: inline-block;
}

.feature h5 {
	text-decoration: none;
	color: #FFFFFF;
}

p {
	font-family: 'Open Sans', sans-serif;
	font-size: 1.2em;
	line-height: 1.7em;
}

.content-text p {
	padding-bottom: 25px;
}

.content-text p:last-child {
	padding: 0;
}

header p {
	margin-top: 300px;
	text-align: center;
}

.content-text p {
	font-size: 1.5em;
	line-height: 1.7em;
	font-weight: 300;
}

.post .title .subtitle {
	font-size: 2.6em;
}

.footer ul a {
	font-size: 1.4em;
	text-decoration: none;
	color: #FFFFFF;
}

.footer p {
	margin-bottom: 10px;
}

.footer p a {
	text-decoration: none;
	color: #FFFFFF;
}

p a, p a:hover {
	text-decoration: none;
	color: #FFFFFF;
}

blockquote {
	text-align: center;
	padding-top: 10px;
	padding-bottom: 35px;
}

/* Links
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.sliding-middle-out, .footer ul a {
	display: inline-block;
	position: relative;
	padding-bottom: 3px;
}

.sliding-middle-out:after, .footer ul a:after {
	content: '';
	display: block;
	margin: auto;
	height: 3px;
	width: 0px;
	background: transparent;
	transition: width .5s ease, background-color .5s ease;
}

.sliding-middle-out:hover:after, .footer ul a:hover:after {
	width: 100%;
	background: #FFFFFF;
}

/* Lists
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.footer ul {
	list-style: none;
	text-align: center;
	padding-bottom: 20px;
	padding-left: 0;
	margin: 0;
}

.footer li {
	display: inline-block;
	margin: 0 10px;
}

.archive-list {
	list-style: none;
	padding-left: 0;
	padding-bottom: 10px;
}


/* Icons
–––––––––––––––––––––––––––––––––––––––––––––––––– */

@font-face {
	font-weight: normal;
	font-style: normal;
	font-family: 'icomoon';
	src:url('fonts/icomoon.eot?-ee0u0f');
	src:url('fonts/icomoon.eot?#iefix-ee0u0f') format('embedded-opentype'),
		url('fonts/icomoon.woff?-ee0u0f') format('woff'),
		url('fonts/icomoon.ttf?-ee0u0f') format('truetype'),
		url('fonts/icomoon.svg?-ee0u0f#icomoon') format('svg');
}

@font-face {
  font-family: "minicons-webalys";
  src:url("fonts/minicons-webalys.eot");
  src:url("fonts/minicons-webalys.eot?#iefix") format("embedded-opentype"),
    url("fonts/minicons-webalys.ttf") format("truetype"),
    url("fonts/minicons-webalys.svg#minicons-webalys") format("svg"),
    url("fonts/minicons-webalys.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

/* Header
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.header {
	position: relative;
	margin: 0 auto;
	min-height: 560px;
	width: 100%;
	height: 100%;
}

.bg-img {
	position: absolute;
	overflow: hidden;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
}

.bg-img img {
	position: absolute;
	top: 0;
	left: 0;
	display: block;
	min-width: 100%;
	min-height: 100%;
}

.title {
	z-index: 1000;
	margin: 0 auto;
	padding: 0 1.25em;
	width: 100%;
	text-align: center;
	position: absolute;
	top: 50%;
	left: 50%;
	-webkit-transform: translateX(-50%) translateY(-50%);
	transform: translateX(-50%) translateY(-50%);
}

.title h1 {
	padding: 0 0 0.2em;
	color: #fff;
	font-weight: 300;
	text-shadow: 0px 0px 4px rgba(0,0,0,0.5);
	font-size: 3.25em;
	margin: 0 auto;
}

.title p {
	color: #fff;
	padding: 0 0 0.6em;
	font-weight: 300;
	font-size: 0.85em;
	margin: 0 auto;
}

.title h1,
.title p.subline {
	line-height: 1;
}

.title p.subline {
	font-size: 1.75em;
}

/* Trigger Button */
button.trigger {
	position: fixed;
	bottom: 40px;
	left: 50%;
	z-index: 5000;
	display: block;
	margin-left: -0.5em;
	padding: 0;
	width: 1em;
	height: 1em;
	border: none;
	background: transparent;
	color: transparent;
	font-size: 2em;
	cursor: pointer;
}

.container-fluid:not(.notrans) button.trigger {
	-webkit-transition: opacity 0.3s 0.5s;
	transition: opacity 0.3s 0.5s;
}

.container-fluid.modify:not(.notrans) button.trigger {
	opacity: 0;
	pointer-events: none;
	-webkit-transition-delay: 0s;
	transition-delay: 0s;
}

button.trigger::before {
	position: absolute;
	bottom: 100%;
	left: -100%;
	padding: 0.8em;
	width: 300%;
	color: #fff;
	content: attr(data-info);
	font-size: 0.35em;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
}

button.trigger:focus {
	outline: none;
}

button.trigger span {
	position: relative;
	display: block;
	overflow: hidden;
	width: 100%;
	height: 100%;
}

button.trigger span::before {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	color: #fff;
	content: "\e097";
	text-transform: none;
	font-weight: normal;
	font-style: normal;
	font-variant: normal;
	font-family: 'icomoon';
	line-height: 1;
	speak: none;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}


.intro-effect-push:not(.notrans) .header,
.intro-effect-push:not(.notrans) > .title,
.intro-effect-push:not(.notrans) .content > div {
	-webkit-transition-property: opacity, -webkit-transform;
	transition-property: opacity, transform;
	-webkit-transition-duration: 1s;
	transition-duration: 1s;
}

.intro-effect-push:not(.notrans) .header {
	-webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
	transition-timing-function: cubic-bezier(0.7,0,0.3,1);
	-webkit-transition-duration: 1.2s;
	transition-duration: 1.2s;
}

.intro-effect-push .codrops-demos a {
	color: #108576;
}

.intro-effect-push .header {
	position: absolute;
	z-index: 1500;
}

.intro-effect-push > .title {
	position: relative;
	top: auto;
	left: auto;
	padding: 6em 1em 2em;
}
.content {
	padding-top:100px;
}
.intro-effect-push .content {
	padding-top:0px;
}
.intro-effect-push .content > div {
	margin-top: 50px;
	color: #fff;
}

.intro-effect-push > .title,
.intro-effect-push .content > div {
	-webkit-transform: translateY(400px);
	transform: translateY(400px);
	opacity: 0;
}

.intro-effect-push.modify > .title,
.intro-effect-push.modify .content > div {
	-webkit-transform: translateY(0);
	transform: translateY(0);
	opacity: 1;
}

.intro-effect-push.modify .header {
	opacity: 0;
	-webkit-transform: translateY(-100%) scale(0.9);
	transform: translateY(-100%) scale(0.9);
}

/* Delays */
.intro-effect-push.modify:not(.notrans) > .title {
	-webkit-transition-delay: 0.5s;
	transition-delay: 0.5s;
}

.intro-effect-push.modify:not(.notrans) .content > div {
	-webkit-transition-delay: 0.6s;
	transition-delay: 0.6s;
}

@media screen and (max-width: 27em) {
	.intro-effect-push .header .title {
		top: 60px;
		-webkit-transform: translateX(-50%);
		transform: translateX(-50%);
	}

	.title, .content {
	}

	button.trigger::before {
		display: none;
	}
}

/* Tablet
–––––––––––––––––––––––––––––––––––––––––––––––––– */
@media (max-width: 992px) { 

.post .title h1, h1 {
	font-size: 3em;
}

.post .title h1 {
	margin-top: 0;
}

h2 {
	font-size: 1.3em;
}

h4 a {
	font-size: 1.5em;
}

.post .title .subtitle {
  font-size: 1.6em;
}

}

/* Mobile
–––––––––––––––––––––––––––––––––––––––––––––––––– */
@media (max-width: 768px) { 

.post .title h1, h1 {
	font-size: 1.7em;
	margin-top: 50px;
}

.post .title h1 {
	margin-top: 0;
	line-height: 1.5em;
}

h2 {
	font-size: 1em;
}

h3 {
	font-size: 1.7em;
}

h4 a {
	font-size: 1.2em;
}

.post .title .subtitle {
  font-size: 1.3em;
}

p {
	font-size: 0.9em;
	line-height: 1.9em;
}

header p {
	margin-top:120px;
}

.index-header {
	height: 400px;
}

.content-text p {
	line-height: 1.9em;
	font-size: 1.1em;
}

.footer ul a {
	font-size: 1em;
}

.footer p {
	font-size: 0.7em;
}

.content .col-md-6 {
	padding-left: 5px;
	padding-right: 5px;
}

header .header {
	display: none;
}

}




/* Utility
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.utility-margin-top {
	margin-top: 0 !important;
}

